--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,10 @@
 # Change 'comments' to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'millennial-3'
+  disqus_shortname: 'jc-bphc'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-2'
+google-ID: ''
 
 menu:
 - {name: 'Interesting Facts',  url: 'facts'}
@@ -16,10 +16,10 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link:    'https://twitter.com/paululele'}
-- {icon: 'facebook', link:   'https://www.facebook.com/paululele'}
-- {icon: 'instagram', link:  'https://instagram.com/paululele'}
-- {icon: 'envelope', link:   'mailto:hello@paulle.ca'}
+  # - {icon: 'twitter', link:    'https://twitter.com/paululele'}
+- {icon: 'facebook', link:   'https://www.facebook.com/JournalClubBPHC'}
+- {icon: 'instagram', link:  'https://instagram.com/journalclub_bphc'}
+- {icon: 'envelope', link:   'mailto:journal@hyderabad.bits-pilani.ac.in'}
 - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
