--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,6 +7,7 @@ disqus:
 google-ID: ''
 
 menu:
+- {name: 'Categories',          url: 'categories'}
 - {name: 'The BITSian Gazette', url: 'gazette'}
 - {name: 'About',               url: 'about'}
 - {name: 'Contact',             url: 'contact'}
