--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "Journal Club"
-description:	       "The Official Site for the Journal Club of BPHC."
+title:		           "The Journal Club"
+description:	       "The Official Site for the Journal Club of BPHC"
 author:              "Sarthak Shah"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
